--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Calculadora</title>
+    <title>Calculadoras</title>
     <script defer src="function.js"></script>
 </head>
 <body>
